--- a/index.ipynb
+++ b/index.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "syllabus"
+  "name": "index"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,24 +11,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[The Periodic Table](index.html)\n",
+      "The Periodic Table\n",
       "===\n",
+      "\n",
+      "### An open curriculum for a physical science class\n",
       "### Pacific High School, Fall 2013\n",
       "### 0.5 Credits - Physical Science\n",
       "\n",
-      "\n",
-      "1-Sentence: \n",
-      "\n",
-      "Elevator Pitch: \n",
-      "\n",
-      "Investigation 0: What is Science?\n",
-      "---\n",
-      "\n",
-      "Investigation 1: Atoms and Molecules\n",
-      "---\n",
-      "\n",
-      "Investigation 2: The Periodic Table\n",
-      "---"
+      "[Syllabus](syllabus.html)"
      ]
     },
     {
