Working on Investigation 0.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -18,7 +18,32 @@
     {
      "cell_type": "markdown",
      "metadata": {},
-     "source": []
+     "source": [
+      "Guiding Questions:\n",
+      "===\n",
+      "- What is science?\n",
+      "    - What kinds of questions can scientists try to answer?\n",
+      "    - How do scientists answer questions?\n",
+      "    - How do these terms relate to understanding what science is:\n",
+      "        - observable\n",
+      "        - testable\n",
+      "        - hypothesis\n",
+      "        - theory\n",
+      "        - falsifiable\n",
+      "        - evidence\n",
+      "        - prediction\n",
+      "    - What is wrong with the commonly heard-phrase \"just a theory\"?\n",
+      "- What is not science?\n",
+      "    - What kinds of questions can non-scientists try to answer, that scientists can't?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Resources:\n",
+      "===\n"
+     ]
     }
    ],
    "metadata": {}
