Added links to index, syllabus.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -19,6 +19,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "[Index](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/phs_periodic_table/master/notebooks/index.ipynb) | \n",
+      "[Syllabus](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/phs_periodic_table/master/notebooks/syllabus.ipynb)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Guiding Questions:\n",
       "===\n",
       "- What is science?\n",
@@ -42,7 +50,9 @@
      "metadata": {},
      "source": [
       "Resources:\n",
-      "===\n"
+      "===\n",
+      "- [What is science?](http://undsci.berkeley.edu/article/whatisscience_01)\n",
+      "    - UC Berkeley resource, pretty accessible"
      ]
     }
    ],
