Resources, and added 'reproducible'.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -40,6 +40,7 @@
       "        - falsifiable\n",
       "        - evidence\n",
       "        - prediction\n",
+      "        - reproducible\n",
       "    - What is wrong with the commonly heard-phrase \"just a theory\"?\n",
       "- What is not science?\n",
       "    - What kinds of questions can non-scientists try to answer, that scientists can't?"
