Cleaned up links.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -19,8 +19,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[Index](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/phs_periodic_table/master/notebooks/index.ipynb) | \n",
-      "[Syllabus](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/phs_periodic_table/master/notebooks/syllabus.ipynb)"
+      "[Index](index.ipynb) | \n",
+      "[Syllabus](syllabus.ipynb)"
      ]
     },
     {
