--- a/notebooks/resources.ipynb
+++ b/notebooks/resources.ipynb
@@ -15,6 +15,14 @@
       "===\n",
       "- [Basic Periodic Table](http://www.ptable.com/Images/periodic%20table.png)"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[Index](index.ipynb) | \n",
+      "[Syllabus](syllabus.ipynb)"
+     ]
     }
    ],
    "metadata": {}
