Added words, added assignment.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -32,7 +32,7 @@
       "- What is science?\n",
       "    - What kinds of questions can scientists try to answer?\n",
       "    - How do scientists answer questions?\n",
-      "    - How do these terms relate to understanding what science is:\n",
+      "    - How do each of these terms relate to understanding what science is, and how scientists build our understanding of the world?\n",
       "        - observable\n",
       "        - testable\n",
       "        - hypothesis\n",
@@ -41,9 +41,28 @@
       "        - evidence\n",
       "        - prediction\n",
       "        - reproducible\n",
+      "        - objective\n",
+      "        - neutral\n",
+      "        - unbiased\n",
+      "        - precise\n",
+      "        - accurate\n",
       "    - What is wrong with the commonly heard-phrase \"just a theory\"?\n",
       "- What is not science?\n",
       "    - What kinds of questions can non-scientists try to answer, that scientists can't?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Assignments\n",
+      "===\n",
+      "- Infinite Halving\n",
+      "    - Do the activity with integrity\n",
+      "    - Complete an informal writeup (on the handout)\n",
+      "    - Complete a semi-formal writeup\n",
+      "        - Semi-formal means strong enough English to be clear and correct scientificialy, but you don't need to have it polished for presentation purposes.\n",
+      "- What is science? What is not science?"
      ]
     },
     {
