--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -72,7 +72,15 @@
       "Resources:\n",
       "===\n",
       "- [What is science?](http://undsci.berkeley.edu/article/whatisscience_01)\n",
-      "    - UC Berkeley resource, pretty accessible"
+      "    - UC Berkeley resource, pretty accessible\n",
+      "- pseudoscience:\n",
+      "    - Masaru Emoto's \"beautiful\" water crystals:\n",
+      "        - [his own page](http://www.masaru-emoto.net/english/water-crystal.html)\n",
+      "        - someone's [non-critical take on his work](http://www.spiritual-knowledge.net/articles/human-word.php)\n",
+      "        - [critique from caltech](http://www.its.caltech.edu/~atomic/snowcrystals/myths/myths.htm)\n",
+      "        - [another critique](http://disinfo.com/2013/08/happy-water-crystals-debunked-as-pseudoscience/)\n",
+      "            - [full article](http://is-masaru-emoto-for-real.com/)\n",
+      "    - DNA tests showing [many herbal supplements are not what they claim to be](http://www.nytimes.com/2013/11/05/science/herbal-supplements-are-often-not-what-they-seem.html)"
      ]
     }
    ],
