Started investigation 1 notebook.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -20,6 +20,8 @@
      "metadata": {},
      "source": [
       "[Index](index.ipynb) | \n",
+      "[Investigation 0](investigation_0.ipynb) | \n",
+      "[Investigation 1](investigation_1.ipynb) | \n",
       "[Syllabus](syllabus.ipynb)"
      ]
     },
@@ -81,6 +83,23 @@
       "        - [another critique](http://disinfo.com/2013/08/happy-water-crystals-debunked-as-pseudoscience/)\n",
       "            - [full article](http://is-masaru-emoto-for-real.com/)\n",
       "    - DNA tests showing [many herbal supplements are not what they claim to be](http://www.nytimes.com/2013/11/05/science/herbal-supplements-are-often-not-what-they-seem.html)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[top](#)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[Index](index.ipynb) | \n",
+      "[Investigation 0](investigation_0.ipynb) | \n",
+      "[Investigation 1](investigation_1.ipynb) | \n",
+      "[Syllabus](syllabus.ipynb)"
      ]
     }
    ],
