Added scientific method terms.

--- a/notebooks/investigation_0.ipynb
+++ b/notebooks/investigation_0.ipynb
@@ -48,6 +48,14 @@
       "        - unbiased\n",
       "        - precise\n",
       "        - accurate\n",
+      "        - experiment\n",
+      "        - question\n",
+      "        - control\n",
+      "        - variable\n",
+      "        - conclusion\n",
+      "        - method\n",
+      "        - research\n",
+      "        - analysis\n",
       "    - What is wrong with the commonly heard-phrase \"just a theory\"?\n",
       "- What is not science?\n",
       "    - What kinds of questions can non-scientists try to answer, that scientists can't?"
