--- a/notebooks/resources.ipynb
+++ b/notebooks/resources.ipynb
@@ -13,7 +13,14 @@
      "source": [
       "Overall Resources\n",
       "===\n",
-      "- [Basic Periodic Table](http://www.ptable.com/Images/periodic%20table.png)"
+      "- Periodic Tables\n",
+      "    - [Basic Periodic Table](http://www.ptable.com/Images/periodic%20table.png)\n",
+      "    - [Royal Society of Chemistry](http://www.rsc.org/periodic-table)\n",
+      "    - [Dynamic Periodic Table](http://ptable.com)\n",
+      "        - Shows many different properties of each element. Has a slider that lets you change the temperature and see what effect that has on each element. Includes advertisements.\n",
+      "- Other\n",
+      "    - [sourcebook for teaching science](http://www.csun.edu/science/chemistry/periodic_table/)\n",
+      "    "
      ]
     },
     {
